fix(home): make origami menu wrap and update header

--- a/css/home.css
+++ b/css/home.css
@@ -11,5 +11,6 @@
 }
 
 section {
-	display: flex
+	display: flex;
+	flex-wrap: wrap;
 }
